@@ -75,6 +75,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 
 @item UTF-8 Support in Windowmenus [Wang Diancheng]
 
+@item UTF-8 Support in GTK Widgets [Christopher Bratusek]
+
 @item Tabbed Windowing Support [Yann Hodique, Scott Scriven, Nathan Froyd, Christopher Bratusek]
 
 @item Tabbed Windowing Support: Raise Tabs on hover [Christopher Bratusek]
