@@ -1,4 +1,7 @@
-2009-05-30  Christopher Bratusek <zanghar@freenet.de>
+2009-06-01  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/gtk/widget.jl: UTF-8 Support
+
+2009-05-31  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/goups.jl
 	* lisp/sawfish/wm/ext/beos-window-menu.jl: UTF-8 Support [Wang Diancheng]
 
